WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269024
[Wasm-GC] Fix subtype hashing
https://bugs.webkit.org/show_bug.cgi?id=269024
Summary
[Wasm-GC] Fix subtype hashing
Asumu Takikawa
Reported
2024-02-08 15:47:38 PST
The following test case, that passes the reference interpreter, currently fails: ``` instantiate(` (module (rec (type (sub (struct))) (type (sub final 0 (struct (field i32 (ref 0))))) (type (sub 0 (struct (field i32 (ref 0))))) (type (sub 2 (struct (field i32 (ref 0))))) ;; valid subtype ) ) `); ``` (goes in wasm/gc/sub.js) The bug appears to be that hashing of sub types is slightly wrong and doesn't account for the final flag.
Attachments
Add attachment
proposed patch, testcase, etc.
Asumu Takikawa
Comment 1
2024-02-08 16:12:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24106
EWS
Comment 2
2024-02-13 10:12:33 PST
Committed
274555@main
(e588a9dece40): <
https://commits.webkit.org/274555@main
> Reviewed commits have been landed. Closing PR #24106 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-13 10:13:15 PST
<
rdar://problem/122890814
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug