[Wasm-GC] Fix subtype hashing https://bugs.webkit.org/show_bug.cgi?id=269024

Reviewed by Justin Michaud.

The main fix is to the hashing+equality calculation for sub types. This fixes a
test case derived from failures in real programs.

There are also some smaller cleanups/refactorings of the subtype checking code
as well.

* Source/JavaScriptCore/wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseType):
(JSC::Wasm::SectionParser::parseRecursionGroup):
(JSC::Wasm::SectionParser::checkSubtypeValidity):
(JSC::Wasm::SectionParser::parseSubtype):
* Source/JavaScriptCore/wasm/WasmSectionParser.h:
* Source/JavaScriptCore/wasm/WasmTypeDefinition.cpp:
(JSC::Wasm::computeSubtypeHash):
(JSC::Wasm::SubtypeParameterTypes::equal):

Canonical link: https://commits.webkit.org/274555@main